# PET-Reconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
.github/workflows/: c-cpp.yml
inc/: Constants.h  DataSummary.h  Geometry.h  Histograming.h  Histograming_impl.h  Image.h  LookupTable.h  PETLINKStream  PETLINKStream.h  RayTracer.h  Sinogram.h  Utils.h  projections.h  projections_impl.h
scripts/: display_img.py  run_callgrind.sh
src/: Geometry.cpp  LookupTable.cpp  PETLINKStream  PETLINKStream.cpp  RayTracer.cpp  extract_timeframe.cpp  main  main.cpp
tests/: test_geometry.cpp  test_lookuptable.cpp  test_petlinkstream.cpp  test_raytracer.cpp  test_sinogram.cpp
